tests/NormalTests/paczka1/fuzzy1/71390767.err
Error in line 2: lMsOYVt9P S835 56,7
Error in line 17: lMsOYVt9P A640 g8,6
Error in line 15: lMsOYVt9P S835 50,7
Error in line 26: T9W3zvhMsA A640 43,7
